test/modules/standard/FileSystem/lydia/getSize/no_such_file.good
no_such_file.chpl:3: error: No such file or directory in getFileSize with path "no_such_file.txt"
