test/modules/standard/FileSystem/lydia/getSize/no_such_file.chpl
use FileSystem;

writeln(getSize("no_such_file.txt"));
// Should generate an error, since the file doesn't exist
